--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,8 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
+      - run: |
+          echo "github token: ${{ secrets.GITHUB_TOKEN }}"
       - name: Deploy with gh-pages
         uses: JamesIves/github-pages-deploy-action@v4.3.1
         with:
