--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -31,8 +31,12 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
-      - run: |
-          echo "github token: ${{ secrets.GITHUB_TOKEN }}"
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
       - name: Deploy with gh-pages
         uses: JamesIves/github-pages-deploy-action@v4.3.1
         with:
