--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "deploy_react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://pgm-githumbi.github.io/deploy-react",
+  "homepage": "https://pgm-githumbi.github.io/deploy_react",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
